<resources>
    <string name="app_name">FoodHub</string>
    <string name="text_register">Register</string>
    <string name="text_login">Login</string>
    <string name="text_home">Home</string>

    <!--  Drawer String  -->
    <string name="open_nav_drawer">Navigation Drawer Open</string>
    <string name="close_nav_drawer">Navigation Drawer Close</string>
    <string name="text_profile_image">Profile image</string>
    <string name="text_username">Username</string>
    <string name="text_account_type">Account type</string>

<!--  Yogene  -->
    <!--  String  -->
    <string name="lbl_donation_form_id">Donation Form ID :</string>
    <string name="lbl_request_form_id">Request Form ID :</string>
    <string name="lbl_donor_id">Donor ID :</string>
    <string name="lbl_donee_id">Donee ID :</string>
    <string name="lbl_category">Category :</string>
    <string name="lbl_food">Food :</string>
    <string name="lbl_quantity">Quantity :</string>
    <string name="lbl_status">Status :</string>
<!--  delete  -->
    <string name="lbl_total_donor">Total Donor</string>
    <string name="lbl_total_donee">Total Donee</string>
    <string name="lbl_total_user">Total User</string>
    <string name="lbl_total_donation">Total Donation</string>
    <string name="lbl_total_request">Total Request</string>
    <string name="lbl_total_news">Total News</string>
    <!--  end delete  -->
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_update">Update</string>
    <string name="btn_search">Search</string>
    <string name="btn_close">Close</string>
    <string name="btn_donor">Donor</string>
    <string name="btn_all_user">All User</string>
    <string name="btn_donee">Donee</string>
    <string name="hint_search_donation_id">Search donation form id</string>
    <string name="hint_search_request_id">Search request form id</string>

    <string-array name="instituteNameList">
        <item>Choose a institute</item>
        <item>Sunway University</item>
        <item>Taylor University</item>
        <item>One Academy University</item>
    </string-array>

    <string-array name="statusListDF">
        <item>Pending</item>
        <item>Donated</item>
        <item>Deleted</item>
    </string-array>
    <string-array name="statusListRF">
        <item>Pending</item>
        <item>Fulfill</item>
        <item>Deleted</item>
    </string-array>
    <string-array name="categoryEmpty">
        <item>No Category</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="btn_delete">Delete</string>


<!--  Darren  -->
    <string name="title1" >title1</string>
    <string name="title2" >title2</string>
    <string name="title3" >title3</string>
    <string name="title4" >title4</string>
    <string name="title5" >title5</string>
    <string name="title7" >title6</string>

<!--  Adrian  -->
    <string name="username">Odyssey45</string>
    <string name="text_analysis_report_button">Analysis Report</string>
    <string name="text_location_report_button">Location Report</string>


    <string name="text_total_donor">Total Donor</string>
    <string name="text_total_donee">Total Donee</string>
    <string name="text_total_user">Total User</string>
    <string name="text_total_donation">Total Donation</string>
    <string name="text_total_request">Total Request</string>
    <string name="text_total_news">Total News</string>
    <string name="text_all_user">All User</string>
    <string name="text_donor">Donor</string>
    <string name="text_donee">Donee</string>
    <string name="text_east_malaysia">East Malaysia</string>
    <string name="text_west_malaysia">West Malaysia</string>
    <string name="text_state">state</string>
    <string name="tag_label">label</string>
    <string name="tag_value">value</string>
    <string name="SearchNews">Search News</string>

    <!--  States  -->
    <string-array name="states">
        <item>Perlis</item>
        <item>Kedah</item>
        <item>Terengganu</item>
        <item>Pahang</item>
        <item>Perak</item>
        <item>Kelantan</item>
        <item>Penang</item>
        <item>Selangor</item>
        <item>Negeri Sembilan</item>
        <item>Johor</item>
        <item>Malacca</item>
        <item>Sabah</item>
        <item>Sarawak</item>
    </string-array>

    <!--  Categories  -->
</resources>