<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Logged.Admin.Report.ReportFragment">


    <!--  push top  -->
    <LinearLayout
        android:id="@+id/linear_layout_temp_R"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/table_layout_report"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="70dp"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_temp_R" >


            <TableRow android:padding="15dp" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:text="@string/lbl_total_donor" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:text="372" />
            </TableRow>

            <View android:background="@android:color/holo_orange_dark" android:layout_width="match_parent" android:layout_height="1dp"/>

            <TableRow android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:text="@string/lbl_total_donee" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:text="500" />
            </TableRow>

            <View android:background="@android:color/holo_orange_dark" android:layout_width="match_parent" android:layout_height="1dp"/>

            <TableRow android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:text="@string/lbl_total_user" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:text="872" />
            </TableRow>

            <View android:background="@android:color/holo_orange_dark" android:layout_width="match_parent" android:layout_height="1dp"/>

            <TableRow android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:text="@string/lbl_total_donation" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:text="791" />
            </TableRow>

            <View android:background="@android:color/holo_orange_dark" android:layout_width="match_parent" android:layout_height="1dp"/>

            <TableRow android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:text="@string/lbl_total_request" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:text="1024" />
            </TableRow>

            <View android:background="@android:color/holo_orange_dark" android:layout_width="match_parent" android:layout_height="1dp"/>

            <TableRow android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:text="@string/lbl_total_news" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:text="32" />
            </TableRow>

        </TableLayout>

    <Button
        android:id="@+id/btn_close_R"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFB52E"
        android:text="@string/btn_close"
        android:textColor="#4E342E"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />






</androidx.constraintlayout.widget.ConstraintLayout>