<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Logged.Admin.Report.LocationReportFragment">

    <!--  push top  -->
    <LinearLayout
        android:id="@+id/linear_layout_temp_LR"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_view_LR"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_temp_LR" >

        <LinearLayout
            android:id="@+id/linear_layout_main_LR"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_layout_button_LR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="70dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="70dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/btn_all_user_LR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#525252"
                    android:padding="2dp"
                    android:text="@string/btn_all_user"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btn_donor_LR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#525252"
                    android:padding="2dp"
                    android:text="@string/btn_donor"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btn_donee_LR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#525252"
                    android:padding="2dp"
                    android:text="@string/btn_donee"
                    android:textAllCaps="false" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_layout_LR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_button_LR">


                <ImageView
                    android:id="@+id/image_view_LR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/image_border"
                    tools:src="@tools:sample/avatars" />

                <TableLayout
                    android:id="@+id/table_layout_location_report"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/border" >


                    <TableRow android:padding="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/lbl_total_donor"
                            android:textAlignment="textStart" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="372"
                            android:textAlignment="textEnd" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/holo_orange_dark" />

                    <TableRow android:padding="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/lbl_total_donee"
                            android:textAlignment="textStart" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="500"
                            android:textAlignment="textEnd" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/holo_orange_dark" />

                    <TableRow android:padding="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/lbl_total_user"
                            android:textAlignment="textStart" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="872"
                            android:textAlignment="textEnd" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/holo_orange_dark" />

                    <TableRow android:padding="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/lbl_total_donation"
                            android:textAlignment="textStart" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="791"
                            android:textAlignment="textEnd" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/holo_orange_dark" />

                    <TableRow android:padding="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/lbl_total_request"
                            android:textAlignment="textStart" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="1024"
                            android:textAlignment="textEnd" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/holo_orange_dark" />

                    <TableRow
                        android:layout_height="97dp"
                        android:padding="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/lbl_total_news"
                            android:textAlignment="textStart" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="32"
                            android:textAlignment="textEnd" />
                    </TableRow>

                </TableLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_close_R"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="#FFB52E"
                android:text="@string/btn_close"
                android:textColor="#4E342E"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>